# web_scraper_chat_agent

./: .gitignore  cal_system_prompt.txt  deploy.ps1  deploy.sh  docker-compose.cal.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  database.py  entrypoint.sh  main.py  pyproject.toml
backend/configs/: config.py  constants.py
backend/dtos/: create_chat_dto.py  create_client_dto.py  query_client_dto.py  send_message_dto.py
backend/helpers/: ai_client_helper.py  ai_processor.py  chunk_summarizer_helper.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_clients_chats_messages_tables.py  001_create_initial_tables.py  002_add_widget_sessions_and_api_key_hash.py  003_refactor_client_ip_primary_key.py  004_add_tools_to_clients.py  005_add_system_prompt_to_clients.py  006_add_client_id_as_primary_key.py
backend/models/: __init__.py  chat.py  client.py  message.py
backend/repositories/: chat_repository.py  client_repository.py  clients_repository.py  message_repository.py
backend/routes/: clients.py
backend/services/: chat_title_service.py  clients_service.py  document_chunking_service.py  embedding_service.py  load_website_content_service.py  rag_pipeline_service.py  response_generation_service.py  vector_store_service.py
backend/src/: container.py
backend/use_cases/: __init__.py  create_chat_use_case.py  create_client_use_case.py  delete_chat_use_case.py  get_chat_messages_use_case.py  get_client_chats_use_case.py  query_client_use_case.py  send_message_use_case.py
cal_backend/: main.py
(+142 files in other folders)
