[project]
name = "web-scraper-voice-agent"
version = "0.1.0"
description = "A web scraper with voice agent capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.2",
    "crawl4ai>=0.7.4",
    "openai>=1.51.0",
    "langchain_openai>=0.1.103",
    "langchain>=0.3.2,<0.4.0",
    "langchain_community>=0.1.0",
    "chromadb>=0.4.3",
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "accelerate>=0.23.0",
    "sentence-transformers>=2.2.2",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [] 